--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/menu.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/menu.css
@@ -240,6 +240,13 @@ body{
   
   .menu .bar{
       margin-left: -100vw;
+      /* background-color: rebeccapurple; */
+  }
+
+  .menu .bar .card a{
+    /* color: yellow; */
+    font-size: 8vw;
+
   }
   .menu .bar li{
       font-size: 4vh;
