--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/catering.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/catering.css
@@ -27,7 +27,6 @@ h4{
     text-align: center;
     font-size: 20px;
     background-color: aquamarine;
-    padding: 10px;
 }
 
 .navbar{
@@ -45,6 +44,7 @@ h4{
 
 .navbar .part1 a{
     color: #111;
+
 }
 
 
@@ -80,6 +80,7 @@ h4{
     width: 100%;
     object-fit: cover;
     object-position: center;
+    
 }
 
 .page2{
@@ -153,10 +154,10 @@ h4{
     width: 100%;
     text-align: center;
     padding: 155px 0px;
-    background-color: #1111117e;
     color: #fff;
     font-size: 2vw;
     border-radius: 10px;
+    font-weight: 500;
     
 
 
@@ -167,14 +168,93 @@ h4{
 }
 
 
+/* catring page resposive style */
+@media (max-width:600px) {
+    .page1 img{
+        height: 100px;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+        
+    }
+
+    /* .page2 h1{
+        color: yellow;
+    } */
+
+    .page2 .card1{
+        height: 60vw;
+       width: 90vw;
+       border-radius: 10px;
+      
+    }
+
+    .page2 .card h3{
+        height: 60vw;
+        width: 90vw;
+        padding: 1px 0px;
+        background-color: #1111117e;
+        color: #fff;
+        font-size: 7vw;
+        font-weight: 500;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+    }
+
+
+    .page2 .card2{
+        height: 60vw;
+       width: 90vw;
+       border-radius: 10px;
+      
+    }
+
+    .page2 .card3{
+        height: 60vw;
+       width: 90vw;
+       border-radius: 10px;
+      
+    }
+
+    .page2 .card4{
+        height: 60vw;
+       width: 90vw;
+       border-radius: 10px;
+      
+    }
+    .page2 .card5{
+        height: 60vw;
+       width: 90vw;
+       border-radius: 10px;
+      
+    }
+    .page2 .card6{
+        height: 60vw;
+       width: 90vw;
+       border-radius: 10px;
+      
+    }
+
+   
+
+    
+}
+
 /* products details */
+
+
 .product-page{
     display: flex;
     align-items: start;
     justify-content: space-evenly;
     gap: 10px;
+    /* background-color: red; */
 
 }
+
 
 .product-page .card1{
     height: 100%;
@@ -241,9 +321,41 @@ h4{
     object-fit: cover;
 }
 
+/* additional styling  */
+#PLink{
+    text-decoration: none; font-weight:800;color: #111;
+}
+
+#H1Link{
+    font-weight: 800;
+}
 
 
 @media (max-width: 600px) {
+
+    html,body{
+        margin: 0px;
+        padding: 0px;
+    }
+
+    body{
+        /* background-color: green; */
+        overflow-x: hidden;
+    }
+
+
+    h4{
+        width: 100%;
+        text-align: center;
+        font-size: 3vw;
+        background-color: aquamarine;
+    }
+
+    #svg1{
+        height: 11vw;
+        width: 11vw;
+    }
+
     .product-page{
         /* background-color: red; */
         display: flex;
@@ -251,39 +363,50 @@ h4{
         justify-content:center;
         flex-direction: column;
         width: 100%;
+        /* background-color:red; */
 
     }
 
     .product-page .card1{
-        display: flex;
-        flex-direction: column;
-        align-items:start;
-       justify-content: start; 
-       background-color: #fff;
-       position: sticky;
-       top: 0;
-       z-index: 99;
-       width: 100%;
-       padding-bottom: 10px;
-        
+        padding: 0px;
+        margin: 0px;
+        background-color:#fff;
+        padding-bottom: 10px;
+        width: 100%;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+
 
     }
      
     .product-page .card1 .Atag{
-        /* background-color: rebeccapurple; */
+        padding: 0px;
+        margin: 0px;
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 30px;
+        width: 100%;
+        /* background-color: red; */
+        
+    }
+
+    .product-page .card1 .Atag h1{
+        font-size: 4vw;
+   
     }
 
     .product-page .card1 .nonAtag{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        /* background-color: red; */
+       margin: 0px;
+       padding: 0px;
+       display: flex;
+       align-items: start;
+       justify-content: center;
         /* margin-left: -50px; */
+    }
+
+    .product-page .card1 .nonAtag h1{
+        font-size: 4vw;
     }
 
     .product-page .card2{
@@ -291,23 +414,40 @@ h4{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        /* background-color: green; */
         width: 85%;
     }
 
 
     .product-page .card2 .cards{
         width: 100%;
-        height: 200px;
+        height: auto;
+        /* background-color: red; */
     }
 
 
     .product-page .card2 .cards .card{
         width: 60%;
+        /* background-color: green; */
        
     }
+
+    .product-page .card2 .cards .card h1{
+        font-size: 3vw;
+        /* color:yellow */
+
+    }
+
+    .product-page .card2 .cards .card h3{
+        font-size:3vw;
+    }
+
+
     .product-page .card2 .cards .card2{
         width: 45%;
+    }
+    .product-page .card2 .cards .card2 img{
+        height: 35vw;
+        width: 35vw;
     }
 
 
