--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/loregiter.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/loregiter.css
@@ -217,6 +217,24 @@ footer .card3 h5{
 
 @media (max-width:600px) {
 
+    body{
+        /* background-color: green; */
+        overflow-x: hidden;
+    }
+
+    h4{
+        width: 100%;
+        text-align: center;
+        font-size: 3vw;
+        background-color: aquamarine;
+        padding: 5px 0px;
+    }
+
+    #svg1{
+        height: 13vw;
+        width: 13vw;
+    }
+
     
     .page2 {
         display: flex;
@@ -224,8 +242,22 @@ footer .card3 h5{
         justify-content: space-between;
         flex-direction: column-reverse;
         /* padding: 100px; */
+        /* background-color: yellow; */
+        min-height: 70vh;
+    }
+
+    .page2 .part1{
         /* background-color: red; */
-        min-height: 60vh;
+        padding: 10px;
+    }
+
+    .page2 .part1 #Iitems{
+        margin: 10px;
+        height: 5vw;
+        width: 90%;
+        border: 1px solid #111;
+        /* background-color: rebeccapurple; */
+
     }
 
 
