--- a/backend/pratise backend/practice project pin/pin/views/groupOrder.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/groupOrder.ejs
@@ -1,6 +1,14 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="/stylesheets/group.css">
-<h4>We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any questions.</h4>
+</head>
+<body>
+    <h4>We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any questions.</h4>
 <header class="navbar">
     <div class="part1">
         <a href="/catering"><svg id="svg1" class="logo" width="106" height="83" viewBox="0 0 106 83" fill="none"
@@ -115,3 +123,7 @@
             <span>Powered by FoodStorm</span></h5>
     </div>
 </footer>
+    
+</body>
+</html>
+
