--- a/backend/pratise backend/practice project pin/pin/views/lunch.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/lunch.ejs
@@ -1,7 +1,16 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="/stylesheets/catering.css">
+    <link rel="stylesheet" href="/stylesheets/catering.css">
+</head>
+<body>
+    
 <h4>We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any
     questions.</h4>
     <!-- serchbar  -->
@@ -124,3 +133,8 @@
     </div>
 </footer>
 <script src="/javascripts/lunch.js"></script>
+
+    
+</body>
+</html>
+
